--- a/app/src/main/res/layout/layout_list_coin.xml
+++ b/app/src/main/res/layout/layout_list_coin.xml
@@ -96,4 +96,15 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <ImageView
+        android:id="@+id/icon_coin"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/price_coin"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="?attr/popupMenuBackground" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
