--- a/app/src/main/res/layout/popup_coin.xml
+++ b/app/src/main/res/layout/popup_coin.xml
@@ -138,4 +138,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="?attr/popupMenuBackground" />
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/favorite"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_margin="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
