--- a/app/src/main/res/drawable/star_empty.xml
+++ b/app/src/main/res/drawable/star_empty.xml
@@ -12,7 +12,7 @@
     2,9 10,9
     12,1"
         android:strokeWidth="0.5"
-        android:strokeColor="@color/black"
+        android:strokeColor="?attr/colorSecondary"
         android:strokeLineJoin="round"
         android:strokeLineCap="round"/>
 </vector>
