--- a/app/src/main/res/layout/popup_coin.xml
+++ b/app/src/main/res/layout/popup_coin.xml
@@ -57,6 +57,14 @@
         app:layout_constraintTop_toBottomOf="@+id/market_cap" />
 
     <TextView
+        android:id="@+id/description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="description"
+        app:layout_constraintStart_toEndOf="@+id/textView12"
+        app:layout_constraintTop_toBottomOf="@+id/volume_24h" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
@@ -118,6 +126,15 @@
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
+
+    <TextView
+        android:id="@+id/textView12"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:text="Description : "
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/couleur_coin"
