--- a/app/src/main/res/layout/layout_list_coin.xml
+++ b/app/src/main/res/layout/layout_list_coin.xml
@@ -45,7 +45,7 @@
         android:id="@+id/textView5"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="Nom de la crypto : "
+        android:text="@string/crypto"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -54,7 +54,7 @@
         android:id="@+id/textView6"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="Symbole : "
+        android:text="@string/symbol"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
@@ -63,7 +63,7 @@
         android:id="@+id/textView7"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="Prix actuel : "
+        android:text="@string/actual_price"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
@@ -72,7 +72,7 @@
         android:id="@+id/textView8"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="Taux de change : "
+        android:text="@string/change"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView7" />
@@ -81,7 +81,7 @@
         android:id="@+id/textView9"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
-        android:text="Couleur : "
+        android:text="@string/color"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
