--- a/app/src/main/res/layout/layout_list_coin.xml
+++ b/app/src/main/res/layout/layout_list_coin.xml
@@ -42,6 +42,14 @@
         app:layout_constraintTop_toBottomOf="@+id/price_coin" />
 
     <TextView
+        android:id="@+id/coin_rank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="rank"
+        app:layout_constraintStart_toEndOf="@+id/textView10"
+        app:layout_constraintTop_toBottomOf="@+id/couleur_coin" />
+
+    <TextView
         android:id="@+id/textView5"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
@@ -86,13 +94,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
+    <TextView
+        android:id="@+id/textView10"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/rank"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/couleur_coin"
         android:layout_width="20dp"
-        android:layout_height="0dp"
+        android:layout_height="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView9"
-        app:layout_constraintTop_toBottomOf="@+id/change_coin">
+        app:layout_constraintTop_toBottomOf="@+id/change_coin"
+        app:layout_constraintVertical_bias="0.0">
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
